Bug 61672 - [regression] Weston: Mouse x- movement is not working on X11 backend on multiple outputs
Summary: [regression] Weston: Mouse x- movement is not working on X11 backend on multi...
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-02 00:38 UTC by min2
Modified: 2013-03-27 19:21 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description min2 2013-03-02 00:38:01 UTC
Weston master:
068b61c25488cb55c686142886d988f3d6554ec0 is the first bad commit

Expected result:
the cursor movement work on multiple X11 compositor outputs.

Actual result:
the cursor movement doesn't work on 2nd and 3rd output.

Relevant weston.ini configuration:

[output]
name=X1
mode=640x480

[output]
name=X2
mode=640x480

[output]
name=X3
mode=640x480


It seems to be caused by the changes in compositor-x11.c
Comment 1 min2 2013-03-02 01:16:36 UTC
It looks it's caused by compositor.c:1716 move_pointer() changes
Comment 2 Scott Moreau 2013-03-10 14:49:48 UTC
Should be fixed with http://lists.freedesktop.org/archives/wayland-devel/2013-March/007824.html I didn't notice this bug report, should be added it to the commit message.
Comment 3 Scott Moreau 2013-03-10 14:56:08 UTC
I have posted v2 that fixes the commit message to include this bug report http://lists.freedesktop.org/archives/wayland-devel/2013-March/007873.html
Comment 4 min2 2013-03-10 14:59:49 UTC
Yes, the:

http://lists.freedesktop.org/archives/wayland-devel/2013-March/007873.html

[PATCH weston v2] compositor-x11: Consider output position when computing relative motion

fixes this problem. Thank you
Comment 5 Kristian Høgsberg 2013-03-27 19:21:12 UTC
commit 5006596a729524100a345e426bef7b2ed93bc561
Author: Kristian Høgsberg <krh@bitplanet.net>
Date:   Wed Mar 27 15:14:07 2013 -0400

    compositor-x11: Fix relative motion reporting for multiple outputs


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.